production work started